--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.2.0",
     "@kolkov/ngx-dadata": "^1.0.3",
     "rxjs": "~7.5.0",
+    "safevalues": "^0.1.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
