--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/schematics-cli": "^13.3.3",
     "@angular/animations": "~13.2.0",
     "@angular/cdk": "^13.3.4",
     "@angular/common": "~13.2.0",
@@ -20,7 +21,11 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ionic/angular": "^6.1.2",
     "@kolkov/ngx-dadata": "^1.0.3",
+    "lodash": "^4.17.21",
+    "ngx-infinite-scroll": "^13.0.1",
+    "ngx-spinner": "^13.1.1",
     "rxjs": "~7.5.0",
     "safevalues": "^0.1.8",
     "tslib": "^2.3.0",
@@ -31,6 +36,7 @@
     "@angular/cli": "~13.2.6",
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
